deploy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: weeeeeiserbikes
  labels:
    oddkin.co/monitoring-tier: "3"
